modificacion imagen formulario

--- a/contactenos.html
+++ b/contactenos.html
@@ -51,7 +51,7 @@
             <h3 class="card-title" style="padding:10px; color: white; background-color: #121213; font-family: 'Lobster Two', cursive;">Formulario de contacto</h3>
         </div>
     </section>
-    <section class="form d-flex align-self-center" style="padding: 40px; background-image: url(../pagina1/IMG/background.jpg); background-size: cover;">
+    <section class="form d-flex align-self-center" style="padding: 40px; background-image: url(IMG/background.jpg); background-size: cover;">
         <div class="container" style="background-color:#af8b0a8c;">
             <form style="padding: 20px;">
                 <div class="form-row">
